[package]
name = "duo-auth"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.26"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.183"
serde_json = "1.0.104"
serde_with = "3.2.0"
sha1 = "0.10.5"
structstruck = "0.4.1"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["time"] }
url = "2.4.0"
urlencoding = "2.1.3"
